lead profile screen

--- a/coreui/src/main/res/values/strings.xml
+++ b/coreui/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="updated_date_title">Updated date:</string>
     <string name="loading_title">Loading…</string>
     <string name="lead_information">Lead information</string>
+    <string name="lead_profile_title">Lead profile</string>
 
 </resources>
