--- a/coreui/src/main/res/values/strings.xml
+++ b/coreui/src/main/res/values/strings.xml
@@ -8,5 +8,27 @@
     <string name="lead_information">Lead information</string>
     <string name="lead_profile_title">Lead profile</string>
     <string name="status_title">Lead status</string>
+    <string name="general_info_title">General info</string>
+    <string name="tags_title">Tags and interests</string>
+    <string name="save">Save</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="lead_intention_type">Lead Intention type</string>
+    <string name="country">Country</string>
+    <string name="city">City</string>
+    <string name="city_region">City/Region</string>
+    <string name="languages">Languages</string>
+    <string name="number">Number</string>
+    <string name="email">E-mail</string>
+    <string name="source">Source</string>
+    <string name="ad_source">Ad-Source</string>
+    <string name="web_source">Web-Source</string>
+    <string name="channel_source">Channel-Source</string>
+    <string name="property_type">Property type</string>
+    <string name="birth_day">Birth day</string>
+    <string name="budget">Budget</string>
+    <string name="location">Location</string>
+    <string name="nationality">Nationality</string>
+    <string name="cancel">Cancel</string>
 
 </resources>
